[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "1.23.0"
authors = ["Block <ai-oss-tools@block.xyz>"]
license = "Apache-2.0"
repository = "https://github.com/block/goose"
description = "An AI agent"

[workspace.lints.clippy]
uninlined_format_args = "allow"
string_slice = "warn"

[workspace.dependencies]
rmcp = { version = "0.14.0", features = ["schemars", "auth"] }
anyhow = "1.0"
futures = "0.3"
regex = "1.12"
serde_json = "1.0"
tokio = { version = "1.49", features = ["full"] }
tracing = "0.1"
webbrowser = "1.0"
which = "8.0.0"
etcetera = "0.11.0"
ignore = "0.4.25"
crunchy = "0.2.4"
env-lock = "1.0.1"
wiremock = "0.6"
serial_test = "3.2.0"
test-case = "3.3.1"
base64 = "0.22.1"
reqwest = { version = "0.12.28", default-features = false, features = ["multipart"] }
tower = "0.5.2"
tower-http = "0.6.8"
url = "2.5.8"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-util = { version = "0.7", features = ["compat"] }
axum = { version = "0.8", features = ["ws", "macros"] }
once_cell = "1.20"
uuid = { version = "1.0", features = ["v4"] }
async-trait = "0.1"
tempfile = "3"
tokio-stream = "0.1"
serde_yaml = "0.9"
include_dir = "0.7.4"
tracing-appender = "0.2"
thiserror = "1.0"
utoipa = { version = "4.1", features = ["chrono"] }
dirs = "5.0"
indoc = "2.0"

[profile.release]
codegen-units = 1
lto = true
