[package]
name = "goose-acp-server"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
goose = { path = "../goose" }
rmcp = { workspace = true }
sacp = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tokio-util = { version = "0.7.15", features = ["compat", "rt"] }
tracing = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
regex = { workspace = true }
fs-err = "3"
url = { workspace = true }

[dev-dependencies]
assert-json-diff = "2.0.2"
wiremock = { workspace = true }
tempfile = "3"
test-case = { workspace = true }
axum = "0.8"
rmcp = { workspace = true, features = ["transport-streamable-http-server"] }
goose-acp-provider = { path = "../goose-acp-provider" }
async-trait = "0.1.89"

[lints]
workspace = true
