[package]
name = "goose-acp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[[bin]]
name = "goose-acp-server"
path = "src/bin/server.rs"

[lints]
workspace = true

[dependencies]
goose = { path = "../goose" }
goose-mcp = { path = "../goose-mcp" }
rmcp = { workspace = true }
sacp = "10.1.0"
anyhow = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true, features = ["rt"] }
tracing = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
regex = { workspace = true }
fs-err = "3"
url = { workspace = true }

# HTTP server dependencies
axum = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }
tracing-subscriber = { workspace = true, features = ["json"] }
async-stream = "0.3.6"
bytes = "1.11.0"
http-body-util = "0.1.3"
uuid = { workspace = true, features = ["v7"] }

[dev-dependencies]
assert-json-diff = "2.0.2"
async-trait = { workspace = true }
wiremock = { workspace = true }
tempfile = { workspace = true }
test-case = { workspace = true }
axum = "0.8"
rmcp = { workspace = true, features = ["transport-streamable-http-server"] }
