[package]
name = "goose-cli-acp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[lints]
workspace = true

[[bin]]
name = "goose-acp"
path = "src/main.rs"

[dependencies]
# Internal
goose = { path = "../goose" }
goose-acp = { path = "../goose-acp" }
goose-mcp = { path = "../goose-mcp" }

# Workspace
anyhow = { workspace = true }
chrono = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true, features = ["compat", "rt"] }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# Crate-local
sacp = "10.1.0"
agent-client-protocol-schema = { version = "0.10", features = ["unstable_session_model"] }
crossterm = { version = "0.29", features = ["event-stream"] }
nu-ansi-term = "0.50"
reedline = "0.45"
shlex = "1.3"
pulldown-cmark = { version = "0.13", default-features = false }
syntect = { version = "5.2", default-features = false, features = ["default-fancy"] }
two-face = { version = "0.5", features = ["syntect-default-fancy"] }
console = "0.15"
dirs = { workspace = true }
serde_yaml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
