[package]
name = "goose-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[lints]
workspace = true

[[bin]]
name = "goose"
path = "src/main.rs"

[dependencies]
goose = { path = "../goose" }
goose-acp = { path = "../goose-acp" }
goose-bench = { path = "../goose-bench" }
goose-mcp = { path = "../goose-mcp" }
rmcp = { workspace = true }
clap = { workspace = true }
cliclack = "0.3.5"
console = "0.16.1"
uuid = { workspace = true }
dotenvy = "0.15.7"
bat = "0.25.0"
anyhow = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tempfile = { workspace = true }
etcetera = { workspace = true }
rand = "0.8.5"
rustyline = "15.0.0"
tracing = { workspace = true }
chrono = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "json", "time"] }
tracing-appender = { workspace = true }
shlex = "1.3.0"
async-trait = { workspace = true }
base64 = { workspace = true }
regex = "1.11.1"
tar = "0.4"
# Web server dependencies
axum = { workspace = true }
tower-http = { workspace = true, features = ["cors", "fs", "auth"] }
http = "1.0"
webbrowser = {workspace = true}
indicatif = "0.18.1"
tokio-util = { workspace = true, features = ["rt"] }
anstream = "0.6.18"
open = "5.3.2"
urlencoding = "2.1"
clap_complete = "4.5.62"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["wincred"] }

[features]
# disables the update command
disable-update = []

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
