[package]
name = "goose-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A client library for interacting with the Goose API"

[dependencies]
goose = { path = "../goose" }
goose-server = { path = "../goose-server" }
anyhow = "1.0"
reqwest = { version = "0.12.9", features = ["json", "stream", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43", features = ["full"] }
tokio-stream = "0.1.17"
eventsource-stream = "0.2.3"
futures = "0.3"
tracing = "0.1"