[package]
name = "goose-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A terminal user interface for Goose"

[dependencies]
goose = { path = "../goose" }
goose-server = { path = "../goose-server" }
goose-client = { path = "../goose-client" }
rmcp = { workspace = true }
anyhow = "1.0"
ratatui = { version = "0.30.0", features = ["unstable-rendered-line-info"] }
crossterm = { version = "0.29", features = ["event-stream"] }
# TODO: Move to ratatui/ratatui-textarea once https://github.com/ratatui/ratatui-textarea/pull/3 merges
ratatui-textarea = { git = "https://github.com/dotdash/ratatui-textarea", rev = "a31abb7b0b999f4e35fed65b76f8d1cb41d6e85e", features = ["search"] }
tokio = { version = "1.43", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["full"] }
axum = { version = "0.8.1", features = ["ws", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "time"] }
tracing-appender = "0.2"
futures = "0.3"
uuid = { version = "1.11", features = ["fast-rng", "v4"] }
directories = "5.0"
tokio-stream = "0.1.17"
clap = { version = "4.5.52", features = ["derive"] }
goose-mcp = { version = "1.14.0", path = "../goose-mcp" }
termimad = "0.34.0"
unicode-width = "0.2.0"
arboard = "3.6.1"
ansi-to-tui = "8.0.1"
git2 = { version = "0.19", default-features = false }
rustyline = "15"
dirs = "6.0.0"
syntect = { version = "5.3.0", default-features = false, features = ["default-syntaxes", "default-themes", "parsing", "regex-fancy"] }

[dev-dependencies]
chrono = "0.4.42"
http = "1.4.0"
tempfile = "3.23.0"
tokio = { version = "1.43", features = ["full"] }
tokio-tungstenite = "0.28.0"
