[package]
name = "goose-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "iocraft TUI frontend for goose"

[[bin]]
name = "goose-tui"
path = "src/main.rs"

[dependencies]
goose = { path = "../goose", default-features = false, features = ["rustls-tls"] }
goose-mcp = { path = "../goose-mcp" }

iocraft = "0.7"

tokio = { workspace = true }
futures = { workspace = true }
tokio-util = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
serde_json = { workspace = true }
clap = { workspace = true }
uuid = { workspace = true }
pulldown-cmark = "0.12"
base64 = { workspace = true }
dirs = { workspace = true }
rmcp = { workspace = true }
crossterm = "0.28"
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = ["code-mode", "rustls-tls"]
code-mode = ["goose/code-mode"]
rustls-tls = ["goose/rustls-tls"]
native-tls = ["goose/native-tls"]
